# tvolnoti

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
img/: readme
pkg/: PKGBUILD  encrypted  private_key.enc
pkg/arch/: PKGBUILD
pkg/automate/: common.sh  deploy.sh  prepare.sh  test.sh
pkg/gentoo/: Manifest  volnoti-0.1.ebuild
res/: .directory  Makefile.am  Makefile.in
res/default/: Makefile.am
res/themes/: Makefile.am
res/themes/dark/: theme.conf
res/white/: theme.conf
src/: Makefile.am  Makefile.in  client.c  daemon.c  notification.c  notification.h  specs.xml  value-client-stub.h  value-daemon-stub.h
