datadir = $(datarootdir)/pixmaps/@PACKAGE@/
ICONS = progressbar_empty_dark.svg progressbar_full_dark.svg \
        volume_high_dark.svg volume_medium_dark.svg \
        volume_low_dark.svg volume_off_dark.svg volume_muted_dark.svg \
		display-brightness-dark.svg media-eject-symbolic.svg empty.png

data_DATA = $(ICONS)
EXTRA_DIST = $(ICONS)
